phpmyadmin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-phpmyadmin
spec:
  containers:
    - name: phpmyadmin-container
  image: phpmyadmin/phpmyadmin
  ports:
    - containerPort: 80
